about component add

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   --normal-font-size: 1rem;
   --small-font-size: 0.875rem;
   --smaller-font-size: 0.813rem;
-  --tiny-font-size: 0.625rem;
+  --tiny-font-size: 0.635rem;
 
   /*font weight*/
 
@@ -190,8 +190,14 @@ img {
 
 /*for medium devices*/
 @media screen and (max-width: 768px) {
+  body{
+    margin:0 0 var(--header-height) 0;
+  }
   .section{
     padding: 2rem 0 4rem;
+  }
+  .section_subtitle{
+    margin-bottom: var(--mb-3);
   }
 }
 
@@ -207,6 +213,4 @@ img {
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
   }
-
-
 }
