--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -30,9 +30,18 @@
     position: relative;
     font-size: var(--h3-font-size);
     font-weight: var(--font-normal);
+    padding-left: 5.4rem;
     margin-bottom: var(--mb-1);
 }
-
+.home_subtitle::before{
+    position: absolute;
+    content: '';
+    width: 70px;
+    height: 1px;
+    background-color:var(--color-light);
+    left: 0;
+    top: 1rem;
+}
 
 .home_description{
     max-width: 400px;
@@ -104,6 +113,7 @@
   .home_subtitle::before{
     width: 42px;
     top: 0.8rem;
+    padding-left: 2rem;
   }
   .home_description{
     max-width: initial;
@@ -133,9 +143,6 @@
         box-shadow: inset 0 0 0 9px rgba(217, 11, 114, 0.537);
     }
     .home_data{
-        display: grid;
-        align-content: space-between;
-        justify-content: center;
         grid-column: 1/3; 
         justify-items:center;   
     }
