--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   --color-light: hsl(252, 30%, 95%);
   --color-gray: hsl(253, 79%, 54%);
   --color-primary: hsl(252, 75%, 60%);
-  --color-secondary: hsl(252, 100%, 90v%);
+  --color-secondary: hsl(252, 100%, 90%);
   --color-success: hsl(120, 95%, 65%);
   --color-danger: hsl(0, 95%, 65%);
   --color-black: hsl(252, 30%, 10%);
