--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -20,7 +20,7 @@
     transition: .3s;
 }
 .home_social_icon:hover{
-    color: var(--color-dark);
+    color: var(--color-primary);
 }
 .home_title{
     font-size: var(--big-font-size);
@@ -53,7 +53,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgba(157, 17, 207, 0.3);
+    box-shadow: inset 0 0 0 9px rgba(10, 21, 148, 0.3);
     order: 1;
     justify-self: center;
     width: 300px;
