--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -140,7 +140,7 @@
         justify-self: initial;
         width: 200px;
         height: 200px;
-        box-shadow: inset 0 0 0 9px rgba(10, 26, 199, 0.537);
+        box-shadow: inset 0 0 0 9px rgb(39 46 133 / 54%);;
     }
     .home_data{
         grid-column: 1/3; 
