testimonial component add

--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -112,5 +112,8 @@ qualification_active{
     .qualification_data{
         gap: 0.5rem;
     }
+    .qualification_button{
+        font-size: var(--small-font-size);
+    }
    
   }
