--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,7 @@ button {
   outline: none;
 }
 
+
 img {
   max-width: 100%;
   height: auto;
@@ -161,12 +162,13 @@ img {
 }
 
 .button:hover {
-  background-color: var(--color-white);
-  color: var(--color-dark);
+  background-color: var(--color-primary);
+  color: var(--color-light);
 }
 
 .button_icon:hover {
   margin-left: var(--mb-0-5);
+  color: var(--color-light);
 }
 
 .button_flex {
