--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,54 +1,56 @@
-.contact_container{
+.contact_container {
     grid-template-columns: repeat(2, max-content);
     justify-content: center;
     column-gap: 6rem;
     padding-bottom: 3rem;
 }
 
-.contact_info{
+.contact_info {
     display: grid;
     grid-template-columns: 300px;
     row-gap: 1rem;
 }
 
-.contact_title{
+.contact_title {
     text-align: center;
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-1-5);
 }
 
-.contact_card{
+.contact_card {
     background-color: var(--color-primary);
     padding: 1rem;
     border: 1px solid rgba(87, 87, 225, 0.1);
     border-radius: 0.75rem;
     text-align: center;
 }
-.contact_form{
+
+.contact_form {
     width: 360px;
 }
-.contact_card-icon{
+
+.contact_card-icon {
     font-size: 2rem;
     margin-bottom: var(--mb-0-25);
     color: var(--color-dark);
 }
 
 .contact_card-title,
-.contact_card-data{
+.contact_card-data {
     font-size: var(--small-font-size);
 }
 
-.contact_card-title{
+.contact_card-title {
     font-weight: var(--font-medium);
 }
 
-.contact_card-data{
+.contact_card-data {
     display: block;
     margin-bottom: var(--mb-0-75);
 }
 
-.contact_button{
+.contact_button {
     color: var(--text-color);
     font-size: var(--small-font-size);
     display: inline-flex;
@@ -57,22 +59,22 @@
     column-gap: 0.25rem;
 }
 
-.contact_button-icon{
+.contact_button-icon {
     font-size: 1rem;
     transition: 0.3s;
 }
 
-.contact_button:hover .contact_button-icon{
+.contact_button:hover .contact_button-icon {
     transform: translate(0.25rem);
 }
 
-.contact_form-container{
+.contact_form-container {
     position: relative;
     margin-bottom: var(--mb-1-5);
     height: 4rem;
 }
 
-.contact_form-input{
+.contact_form-input {
     position: absolute;
     top: 0;
     left: 0;
@@ -87,7 +89,7 @@
     z-index: 1;
 }
 
-.contact_form-tag{
+.contact_form-tag {
     position: absolute;
     top: -0.79rem;
     left: 1.25rem;
@@ -97,19 +99,20 @@
     background-color: var(--color-dark);
 }
 
-.contact_form-area{
+.contact_form-area {
     height: 10rem;
 }
-.contact_card-run{
+
+.contact_card-run {
     font-size: 1.5rem;
     transition: 0.4s;
 }
 
-.button:hover .contact_card-run{
+.button:hover .contact_card-run {
     transform: translate(0.25rem);
 }
 
-.contact_form-area textarea{
+.contact_form-area textarea {
     resize: none;
 }
 
@@ -117,41 +120,39 @@
 /*==============BREAKPOINTS===============================*/
 /*for large devices*/
 @media screen and (max-width: 992px) {
-   .contact_container{
-    column-gap: 3rem;
-   }
-  
-  }
-  
-  /*for medium devices*/
-  @media screen and (max-width: 768px) {
-    .contact_container{
+    .contact_container {
+        column-gap: 3rem;
+    }
+
+}
+
+/*for medium devices*/
+@media screen and (max-width: 768px) {
+    .contact_container {
         grid-template-columns: 1fr;
         row-gap: 3rem;
     }
 
-    .contact_info{
+    .contact_info {
         justify-content: center;
     }
 
-    .contact_form{
+    .contact_form {
         margin: 0 auto;
     }
-    
-  }
-  
-  /*for medium devices*/
-  @media screen and (max-width: 576px) {
-    .contact_info{
+
+}
+
+/*for medium devices*/
+@media screen and (max-width: 576px) {
+    .contact_info {
         grid-template-columns: 1fr;
     }
 
-    .contact_form{
+    .contact_form {
         width: 100%;
     }
-  }
-  
-  /*for small  devices*/
-  @media screen and (max-width: 350px) {
-   
-  }
+}
+
+/*for small  devices*/
+@media screen and (max-width: 350px) {}
