professional logo add and css changed

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -20,6 +20,9 @@
     color: var(--color-light);
     font-weight: var(--font-medium);
 }
+.nav_logo{
+    width: 5%;
+}
 
 .nav_list {
     display: flex;
