--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,12 +5,14 @@
 .footer_container{
     padding: 2rem 0 2rem;
 }
-.nav_logo_icon{
+.nav_logo_footer{
+    margin: 0 auto;
     text-align: center;
     margin-bottom: var(--mb-2);
     color: var(--color-light);
     font-size: 2rem;
     display: block;
+    width: 10%;
 
 }
 
